# motion_examole

./: CMakeLists.txt  README.md  package.xml
include/: MoveToDesiredJoints.h
recordings/: rec1
src/: MoveToDesiredJoints.cpp  MoveToDesiredJoints_node.cpp
